--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hq-frontend-next",
+  "name": "portfolio-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-particles-js": "^3.4.1",
+    "styled-components": "^5.3.0"
   }
 }
